--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
           <div id="hello" class="typewriter pb-3">
         Welcome Master Adnan
           </div>
-          <a class="btn btn-primary mb-5" href="https://allmylinx.wordpress.com/">Sign in to Cyclic</a>
+          <a class="btn btn-primary mb-5" href="https://allmylinx.wordpress.com/">Clcik To Move Foward</a>
         </div>
         <div id="world">
           <canvas id='rotatingGlobe' style='cursor: move;'></canvas>
